2012-06-29 Roman
- DAQ:Data active flag is added to a parameter and an attribute of DAQ by function dataActive().
- !:FIX:Archive: Restore value archive's starting on set by function setSrcMode().
    Fix archives enabling for active data sources.
    Archiving data on active mode is made only for active data source, for restoring archives at start from reserve allow.
    New path type to archiving source processing error is fixed for holes data fill from reserve at request.
- DAQ.SoundCard: Check for allowed samplerates and placing it to combo is added.


2012-06-25 Roman
- FIX:Protocol.HTTP: Incomplete HTTP header processing is added, observed on packages from SSL transport.


2012-06-23 Roman
- TConfig: Exceptions processing is added to cfgChange() for revert changes.
- Transport.Serial: Exit from data mode command is added (typical "+++") which used first, next PreInit timeout and next HangUp.
- !!!:DAQ.System: Periodic checking for new devices add to Automatic mode is added.
    Temporary data storage is added to parameter context, individual for DA type. Used for CPU info.
    Parameter's error processing is added for all DA types.
    Attributes "Read speed (B/s)" and "Write speed (B/s)" is added to DA_HDDSTAT.
    Attributes "Receive speed (B/s)" and "Transmit speed (B/s)" is added to DA_NETSTAT.


2012-06-20 Roman
- UI.Vision: Scroll position restore for WebKit is added.
- UI.WebVision: Modify attributes flags is added and used for primitive 'Document' updating need check.
    Restore after open external links into primitive 'Document' frame is added.
- UI.WebVision: Internal links processing for primitive "Document" is allowed but question about the iframe need clear is open now.


2012-06-19 Roman
- SYS, UI.QTStarter: OpenSCADA source tree version (work) changed to 0.8.1, no release yet. Splash is updated.
- !!:SYS: New system task's endrun mechanism is realized, based on signal SIGUSR1 and it checking by function TSYS::taskEndRun().